--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ aiohttp==3.6.3
 async-timeout==3.0.1
 attrs==20.3.0
 chardet==3.0.4
-discord.py==1.6.0a2614+g6515f33
+discord.py==1.5.1
 idna==2.10
 multidict==4.7.6
 python-dotenv==0.15.0
 yarl==1.5.1
 pymongo~=3.11.2
+asyncinit~=0.2.4
+dnspython
